# awesome-low-level-design

./: .gitignore  DOCUMENTATION.md  README.md  build.gradle.kts  settings.gradle.kts
ArpitConceptsAndTheory/: LinksToBuildE2EUnderstanding.md  Networking.md  reentrantLock_multithreading_locking_compiled.md
class-diagrams/library-management-system-diagram/: CONVERT_TO_WORD.md  IMPLEMENTATION_PROOF.md  README.md  STRUCTURE.md  library_management_system.mmd  library_management_system.puml
concepts/: DRY.md  KISS.md  OOPS.md  YAGNI.md
design-patterns/cpp/proxy/: CMakeLists.txt  high_resolution_image.cpp  image.h  image_gallery_app_v1.cpp  image_gallery_app_v2.cpp  image_proxy.cpp  image_proxy.h
design-patterns/python/: IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  all_patterns_demo.py
gitHubForkTest/: nb-configuration.xml  pom.xml
gradle/wrapper/: gradle-wrapper.properties
oop/rust/: .gitignore  Cargo.toml
oop/rust/abstraction/: README.md  main.rs
oop/rust/aggregation/: README.md  main.rs
oop/rust/association/: README.md  main.rs
oop/rust/classesAndobjects/: README.md  main.rs
oop/rust/classes_and_objects/: README.md  main.rs
oop/rust/composition/: README.md  main.rs
oop/rust/encapsulation/: README.md  main.rs
oop/rust/inheritance/: README.md  main.rs
oop/rust/interfaces/: README.md  main.rs
oop/rust/polymorphism/: README.md  main.rs
problems/: airline-management-system.md  amazon.md  atm.md  car-rental-system.md  chess-game.md  coffee-vending-machine.md  concert-ticket-booking-system.md  concert-ticketing-system.md  course-registration-system.md  cricinfo.md  digital-wallet-service.md  digital-wallet-system.md  elevator-system.md  facebook.md  food-delivery-service.md  hotel-management-system.md  library-management-system.md  linkedin.md  logging-framework.md  lru-cache.md  movie-ticket-booking-system.md  music-streaming-service.md  online-auction-system.md  online-shopping-service.md  online-stock-brokerage-system.md  parking-lot.md  pub-sub-system.md  restaurant-management-system.md  ride-sharing-service.md  snake-and-ladder.md  social-networking-service.md  splitwise.md  stack-overflow.md  task-management-system.md  tic-tac-toe.md  tik-tok-toe.md  traffic-signal.md  vehicle-rental-system.md  vending-machine.md
solutions/c++/: Task.cpp  Task.h  TaskManagementSystem.cpp  TaskManager.cpp  TaskManager.h  User.cpp  User.h
solutions/csharp/: CoffeeVendingMachine.sln  LLDRunner.cs  c#.csproj  c#.sln
solutions/golang/: go.mod  main.go
solutions/java/: .gitignore  pom.xml
solutions/my-javascript/: README.md
solutions/python/: .gitignore  restaurant_delivery_zones_union_find.py
solutions/typescript/: README.md  package-lock.json  package.json  tsconfig.json
uml-diagrams/class-diagrams/: airlinemanagementsystem-class-diagram.puml  atm-class-diagram.puml  chessgame-class-diagram.puml  coffeevendingmachine-class-diagram.puml  concertticketbookingsystem-class-diagram.puml  cricinfo-class-diagram.puml  digitalwalletservice-class-diagram.puml  (+15 more)
(+3956 files in other folders)
