[package]
name = "rust_oop_concepts"
version = "0.1.0"
edition = "2021"
authors = ["Anil Kumar Singh <anilkumarsingh5698@gmail.com>"]
description = "A collection of Low-Level Design (LLD) and Object-Oriented Programming (OOP) examples implemented in Rust."
repository = "https://github.com/AnilKumarSingh9856/awesome-low-level-design"
license = "MIT"
keywords = ["rust", "oop", "design-patterns", "lld"]
categories = ["development-tools", "algorithms"]

# BINARY TARGETS
# According to Cargo docs, we can explicitly define binaries 
# that are located outside the standard 'src/bin' directory.

[[bin]]
name = "classesAndobjects"
path = "classesAndobjects/main.rs"

[[bin]]
name = "interfaces"
path = "interfaces/main.rs"

[[bin]]
name = "abstraction"
path = "abstraction/main.rs"


[[bin]]
name = "inheritance"
path = "inheritance/main.rs"

[[bin]]
name = "polymorphism"
path = "polymorphism/main.rs"

[[bin]]
name = "encapsulation"
path = "encapsulation/main.rs"

[[bin]]
name = "aggregation"
path = "aggregation/main.rs"

[[bin]]
name = "composition"
path = "composition/main.rs"

[[bin]]
name = "association"
path = "association/main.rs"